🐣🗼 Checkpoint script.js:700520/384 index.html:700520/42

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.js"></script>
     <script src="/GLTFLoader.js" defer></script>
+    <script src="/OrbitControls.js" defer></script>
     <script src="/script.js" defer></script>
   </head>
   <body>
