--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.js"></script>
     <script src="/GLTFLoader.js" defer></script>
     <script src="/OrbitControls.js" defer></script>
-    <script src="/FABRIK.js" defer></script>
+    <script src="/FABRIK.web.js" defer></script>
 
     <script src="/script.js" defer></script>
 
