--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/styles.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.min.js"></script>
     <script src="/GLTFLoader.js" defer></script>
     <script src="/OrbitControls.js" defer></script>
     <script src="/FABRIK.web.js" defer></script>
