--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Hello!</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/styles.css">
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Yee! Dog!">
+    <meta property="og:url" content="http://yee.dog">
+    <meta property="og:title" content="Yee! Dog!">
+    <meta property="og:description" content="My Favorite Dog">
+    <meta property="og:image" content="http://yee.dog/fb.png">
+    <meta property="og:image:width" content="1000">
+    <meta property="og:image:height" content="600">
+    <link rel="apple-touch-icon" href="http://yee.dog/icon.png">
+    <meta name="apple-mobile-web-app-title" content="Wurstgang">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+</head>
 
+<body>
+    <div id="signature">
+        made with <a href="http://threejs.org" target="_blank">THREE.js</a>
+        <br/> by <a href="https://twitter.com/fillmember" target="_blank">ten</a> / <a href="https://mutate.space" target="_blank">mutate.space</a>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.min.js"></script>
-    <script src="/GLTFLoader.js" defer></script>
-    <script src="/OrbitControls.js" defer></script>
-    <script src="/FABRIK.web.js" defer></script>
+    <script src="bundle.js" defer></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47685043-3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
 
-    <script src="/script.js" defer></script>
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-47685043-3');
+    </script>
+</body>
 
-  </head>
-  <body>
-  </body>
 </html>
