fix for publishing at github pages

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Yee! Dog!">
-    <meta property="og:url" content="http://yee.dog">
+    <meta property="og:url" content="https://yee.dog">
     <meta property="og:title" content="Yee! Dog!">
     <meta property="og:description" content="My Favorite Dog">
-    <meta property="og:image" content="http://yee.dog/fb.png">
+    <meta property="og:image" content="fb.png">
     <meta property="og:image:width" content="1000">
     <meta property="og:image:height" content="600">
-    <link rel="apple-touch-icon" href="http://yee.dog/icon.png">
+    <link rel="apple-touch-icon" href="icon.png">
     <meta name="apple-mobile-web-app-title" content="Wurstgang">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
