--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 <body>
     <div id="signature">
-        made with <a href="http://threejs.org" target="_blank">THREE.js</a>
+        <a href="https://github.com/fillmember/wurstgang/">source</a>
+        <br/> made with <a href="http://threejs.org" target="_blank">THREE.js</a>
         <br/> by <a href="https://twitter.com/fillmember" target="_blank">ten</a> / <a href="https://mutate.space" target="_blank">mutate.space</a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.min.js"></script>
