use local copy of three.min.js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br/> made with <a href="http://threejs.org" target="_blank">THREE.js</a>
         <br/> by <a href="https://twitter.com/fillmember" target="_blank">ten</a> / <a href="https://mutate.space" target="_blank">mutate.space</a>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.min.js"></script>
+    <script src="three.min.js"></script>
     <script src="bundle.js" defer></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47685043-3"></script>
