--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Yee! Dog!">
     <meta property="og:url" content="https://yee.dog">
@@ -23,12 +23,12 @@
 
 <body>
     <div id="signature">
-        <a href="https://github.com/fillmember/wurstgang/">source</a>
-        <br/> made with <a href="http://threejs.org" target="_blank">THREE.js</a>
+        made with <a href="http://threejs.org" target="_blank">THREE.js</a>
         <br/> by <a href="https://twitter.com/fillmember" target="_blank">ten</a> / <a href="https://mutate.space" target="_blank">mutate.space</a>
+        <br/><a href="https://github.com/fillmember/wurstgang/">source on GitHub</a>
     </div>
-    <script src="three.min.js"></script>
-    <script src="bundle.js" defer></script>
+    <script src="js/three.min.js"></script>
+    <script src="js/bundle.js" defer></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47685043-3"></script>
     <script>
