remove deprecating and breaking cache manifest

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest">
+<html>
 
 <head>
     <title>Hello!</title>
@@ -22,11 +22,11 @@
 </head>
 
 <body>
-    <div id="signature">
+    <!-- <div id="signature">
         made with <a href="http://threejs.org" target="_blank">THREE.js</a>
         <br/> by <a href="https://twitter.com/fillmember" target="_blank">ten</a> / <a href="https://mutate.space" target="_blank">mutate.space</a>
         <br/><a href="https://github.com/fillmember/wurstgang/">source on GitHub</a>
-    </div>
+    </div> -->
     <script src="js/three.min.js"></script>
     <script src="js/bundle.js" defer></script>
 </body>
